update the (stupid) way dependencies were handled on windows. this allows a lot of cleanup of cmake files (still more to do) the linux build is unlikely to work due to the way _statics aren't handled

--- a/Code/GraphMol/CMakeLists.txt
+++ b/Code/GraphMol/CMakeLists.txt
@@ -87,8 +87,7 @@ endif()
 
 add_subdirectory(Wrap)
 
-rdkit_test(graphmolTest1 test1.cpp LINK_LIBRARIES
-${RDK_COORDGEN_LIBS} Depictor FileParsers SmilesParse GraphMol
+rdkit_test(graphmolTest1 test1.cpp LINK_LIBRARIES FileParsers SmilesParse GraphMol
 RDGeometryLib RDGeneral SubstructMatch ForceFieldHelpers ForceField)
 
 rdkit_test(graphmolcpTest cptest.cpp LINK_LIBRARIES  SmilesParse GraphMol RDGeometryLib RDGeneral)
@@ -96,14 +95,14 @@ rdkit_test(graphmolcpTest cptest.cpp LINK_LIBRARIES  SmilesParse GraphMol RDGeom
 rdkit_test(graphmolqueryTest querytest.cpp LINK_LIBRARIES SubstructMatch SmilesParse GraphMol RDGeometryLib RDGeneral)
 
 rdkit_test(graphmolMolOpsTest molopstest.cpp
-           LINK_LIBRARIES ${RDK_COORDGEN_LIBS} Depictor SubstructMatch FileParsers
+           LINK_LIBRARIES SubstructMatch FileParsers
 	   SmilesParse GraphMol RDGeometryLib RDGeneral)
 
 rdkit_test(graphmoltestCanon testCanon.cpp
            LINK_LIBRARIES SubstructMatch SmilesParse GraphMol RDGeometryLib RDGeneral)
 
 rdkit_test(graphmoltestChirality testChirality.cpp
-           LINK_LIBRARIES ${RDK_COORDGEN_LIBS} Depictor SmilesParse FileParsers
+           LINK_LIBRARIES SmilesParse FileParsers
 	   GraphMol RDGeometryLib RDGeneral)
 
 rdkit_test(graphmoltestPickler testPickler.cpp
@@ -115,7 +114,7 @@ rdkit_test(graphmoltestPicklerGlobalSetting testPicklerGlobalSettings.cpp
 rdkit_test(graphmolIterTest itertest.cpp LINK_LIBRARIES SmilesParse GraphMol RDGeometryLib RDGeneral)
 
 rdkit_test(hanoiTest hanoitest.cpp LINK_LIBRARIES
-     ${RDK_COORDGEN_LIBS} Depictor SubstructMatch SmilesParse FileParsers GraphMol
+     SubstructMatch SmilesParse FileParsers GraphMol
      RDGeometryLib RDGeneral ${RDKit_THREAD_LIBS} )
 
 rdkit_test(graphmolMemTest1 memtest1.cpp LINK_LIBRARIES SmilesParse GraphMol RDGeometryLib RDGeneral)
