--- a/Code/GraphMol/MolAlign/CMakeLists.txt
+++ b/Code/GraphMol/MolAlign/CMakeLists.txt
@@ -1,16 +1,12 @@
 rdkit_library(MolAlign AlignMolecules.cpp O3AAlignMolecules.cpp
-              LINK_LIBRARIES MolTransforms SubstructMatch Alignment)
+              LINK_LIBRARIES MolTransforms SubstructMatch Alignment RDGeometryLib RDGeneral)
 
 rdkit_headers(AlignMolecules.h O3AAlignMolecules.h DEST GraphMol/MolAlign)
 
 rdkit_test(testMolAlign testMolAlign.cpp
            LINK_LIBRARIES MolAlign Descriptors
-${RDK_COORDGEN_LIBS} Depictor FileParsers DistGeomHelpers MolTransforms ForceFieldHelpers 
-SmilesParse DistGeometry ForceField Optimizer EigenSolvers Alignment SubstructMatch
+FileParsers DistGeomHelpers ForceFieldHelpers
+SmilesParse DistGeometry ForceField Optimizer SubstructMatch
 GraphMol RDGeneral RDGeometryLib ${RDKit_THREAD_LIBS})
 
 add_subdirectory(Wrap)
-
-
-
-
