--- a/Code/GraphMol/Depictor/Wrap/CMakeLists.txt
+++ b/Code/GraphMol/Depictor/Wrap/CMakeLists.txt
@@ -1,7 +1,7 @@
 rdkit_python_extension(rdDepictor
                        rdDepictor.cpp
-                       DEST Chem 
-                       LINK_LIBRARIES 
-           ${RDK_COORDGEN_LIBS} Depictor SmilesParse FileParsers SubstructMatch GraphMol RDGeometryLib RDGeneral RDBoost )
+                       DEST Chem
+                       LINK_LIBRARIES
+            Depictor SmilesParse FileParsers SubstructMatch GraphMol RDGeometryLib RDGeneral RDBoost )
 
 add_pytest(pyDepictor ${CMAKE_CURRENT_SOURCE_DIR}/testDepictor.py)
