--- a/Code/GraphMol/MolTransforms/CMakeLists.txt
+++ b/Code/GraphMol/MolTransforms/CMakeLists.txt
@@ -3,10 +3,10 @@ rdkit_library(MolTransforms MolTransforms.cpp
 
 rdkit_headers(MolTransforms.h DEST GraphMol/MolTransforms)
 
-rdkit_test(testMolTransforms test1.cpp 
+rdkit_test(testMolTransforms test1.cpp
            LINK_LIBRARIES MolTransforms
-	   ${RDK_COORDGEN_LIBS} Depictor SubstructMatch
-           FileParsers SmilesParse 
+	   SubstructMatch
+           FileParsers SmilesParse
 	   EigenSolvers GraphMol RDGeometryLib RDGeneral )
 
 add_subdirectory(Wrap)
