enable auto-download of rapidjson distrib

--- a/Code/GraphMol/MolInterchange/CMakeLists.txt
+++ b/Code/GraphMol/MolInterchange/CMakeLists.txt
@@ -1,3 +1,17 @@
+
+if(NOT EXISTS "${CMAKE_SOURCE_DIR}/External/rapidjson-1.1.0")
+    downloadAndCheckMD5("https://github.com/Tencent/rapidjson/archive/v1.1.0.tar.gz"
+          "${CMAKE_SOURCE_DIR}/External/rapidjson-1.1.0.tar.gz"
+          "badd12c511e081fec6c89c43a7027bce")
+    execute_process(COMMAND ${CMAKE_COMMAND} -E tar zxf
+      ${CMAKE_SOURCE_DIR}/External/rapidjson-1.1.0.tar.gz
+      WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/External)
+else()
+  message("-- Found RapidJSON source in ${CMAKE_SOURCE_DIR}/External")
+endif()
+
+include_directories(${CMAKE_SOURCE_DIR}/External/rapidjson-1.1.0/include)
+
 rdkit_library(MolInterchange
               MolInterchange.cpp
               LINK_LIBRARIES GraphMol)
