--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -9,10 +9,14 @@ else(APPLE)
 endif(APPLE)
 
 if(RDK_OPTIMIZE_NATIVE)
-add_definitions(-DUSE_BUILTIN_POPCOUNT)
+  add_definitions(-DUSE_BUILTIN_POPCOUNT)
 endif(RDK_OPTIMIZE_NATIVE)
 
 set(EXTENSION rdkit)
+if(NOT DEFINED Boost_INCLUDE_DIRS)
+  find_package(Boost 1.39.0 REQUIRED)
+endif(NOT DEFINED Boost_INCLUDE_DIRS)
+include_directories(${Boost_INCLUDE_DIRS})
 if(NOT DEFINED PostgreSQL_LIBRARY_DIRS)
   find_package(PostgreSQL REQUIRED)
 endif(NOT DEFINED PostgreSQL_LIBRARY_DIRS)
