remove link-time dependency on boost::thread

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ option(RDK_BUILD_CONTRIB "build the Contrib directory" OFF )
 option(RDK_INSTALL_INTREE "install the rdkit in the source tree (former behavior)" ON )
 option(RDK_INSTALL_STATIC_LIBS "install the rdkit static libraries" ON )
 option(RDK_INSTALL_PYTHON_TESTS "install the rdkit Python tests with the wrappers" OFF )
-option(RDK_BUILD_THREADSAFE_SSS "enable thread-safe substructure searching (requires boost.thread)" ON )
+option(RDK_BUILD_THREADSAFE_SSS "enable thread-safe substructure searching" ON )
 option(RDK_BUILD_SLN_SUPPORT "include support for the SLN format" ON )
 option(RDK_TEST_MULTITHREADED "run some tests of multithreading" ON )
 option(RDK_BUILD_SWIG_JAVA_WRAPPER "build the SWIG JAVA wrappers (does nothing if RDK_BUILD_SWIG_WRAPPERS is not set)" ON )
@@ -261,18 +261,9 @@ endif(RDK_BUILD_DESCRIPTORS3D)
 find_package (Threads)
 set(RDKit_THREAD_LIBS Threads::Threads)
 if(RDK_BUILD_THREADSAFE_SSS)
-  find_package(Boost 1.56.0 COMPONENTS thread system)
-  if(Boost_THREAD_FOUND AND Boost_SYSTEM_FOUND)
-    list(APPEND Boost_IMPORTED_LIBRARIES Boost::thread Boost::system)
-    target_compile_definitions(rdkit_base INTERFACE -DRDK_THREADSAFE_SSS -DBOOST_ALL_NO_LIB)
-    list(APPEND RDKit_THREAD_LIBS Boost::thread Boost::system)
-    if(RDK_TEST_MULTITHREADED)
-      target_compile_definitions(rdkit_base INTERFACE "-DRDK_TEST_MULTITHREADED")
-    endif()
-  else()
-    message("Boost thread or system not found. Disabling RDK_BUILD_THREADSAFE_SSS.")
-    set(RDK_BUILD_THREADSAFE_SSS OFF)
-    set(RDK_TEST_MULTITHREADED OFF)
+  target_compile_definitions(rdkit_base INTERFACE -DRDK_THREADSAFE_SSS)
+  if(RDK_TEST_MULTITHREADED)
+    target_compile_definitions(rdkit_base INTERFACE "-DRDK_TEST_MULTITHREADED")
   endif()
 else()
   if(RDK_TEST_MULTITHREADED)
