--- a/Code/GraphMol/SLNParse/Wrap/CMakeLists.txt
+++ b/Code/GraphMol/SLNParse/Wrap/CMakeLists.txt
@@ -2,6 +2,6 @@ rdkit_python_extension(rdSLNParse rdSLNParse.cpp
                        DEST Chem
                        LINK_LIBRARIES
                        SLNParse SmilesParse SubstructMatch GraphMol
-                       RDGeometryLib RDGeneral DataStructs RDBoost Boost::regex)
+                       RDGeometryLib RDGeneral DataStructs RDBoost )
 
 add_pytest(pySLNParse ${CMAKE_CURRENT_SOURCE_DIR}/testSLN.py)
