--- a/External/AvalonTools/CMakeLists.txt
+++ b/External/AvalonTools/CMakeLists.txt
@@ -94,7 +94,9 @@ include_directories(${AVALON_SRC_PATH})
 rdkit_library(AvalonLib AvalonTools.cpp SHARED LINK_LIBRARIES avalon_clib FileParsers SmilesParse GraphMol DataStructs RDGeometryLib RDGeneral )
 rdkit_headers(AvalonTools.h DEST GraphMol)
 rdkit_test(testAvalonLib1 test1.cpp
-           LINK_LIBRARIES AvalonLib avalon_clib FileParsers SmilesParse GraphMol DataStructs RDGeometryLib RDGeneral)
+           LINK_LIBRARIES AvalonLib avalon_clib
+	   SubstructMatch
+	   FileParsers SmilesParse GraphMol DataStructs RDGeometryLib RDGeneral)
 
 add_subdirectory(Wrap)
 
