--- a/Code/GraphMol/CMakeLists.txt
+++ b/Code/GraphMol/CMakeLists.txt
@@ -87,20 +87,23 @@ endif()
 
 add_subdirectory(Wrap)
 
-rdkit_test(graphmolTest1 test1.cpp LINK_LIBRARIES FileParsers SmilesParse GraphMol Depictor RDGeometryLib RDGeneral SubstructMatch ForceFieldHelpers ForceField)
+rdkit_test(graphmolTest1 test1.cpp LINK_LIBRARIES FileParsers SmilesParse GraphMol
+RDGeometryLib RDGeneral SubstructMatch ForceFieldHelpers ForceField)
 
 rdkit_test(graphmolcpTest cptest.cpp LINK_LIBRARIES  SmilesParse GraphMol RDGeometryLib RDGeneral)
 
 rdkit_test(graphmolqueryTest querytest.cpp LINK_LIBRARIES SubstructMatch SmilesParse GraphMol RDGeometryLib RDGeneral)
 
 rdkit_test(graphmolMolOpsTest molopstest.cpp
-           LINK_LIBRARIES SubstructMatch FileParsers SmilesParse GraphMol RDGeometryLib RDGeneral)
+           LINK_LIBRARIES SubstructMatch FileParsers
+	   SmilesParse GraphMol RDGeometryLib RDGeneral)
 
 rdkit_test(graphmoltestCanon testCanon.cpp
            LINK_LIBRARIES SubstructMatch SmilesParse GraphMol RDGeometryLib RDGeneral)
 
 rdkit_test(graphmoltestChirality testChirality.cpp
-           LINK_LIBRARIES SmilesParse FileParsers GraphMol RDGeometryLib RDGeneral)
+           LINK_LIBRARIES SmilesParse FileParsers
+	   GraphMol RDGeometryLib RDGeneral)
 
 rdkit_test(graphmoltestPickler testPickler.cpp
            LINK_LIBRARIES SmilesParse SubstructMatch FileParsers GraphMol RDGeometryLib RDGeneral)
@@ -110,9 +113,8 @@ rdkit_test(graphmoltestPicklerGlobalSetting testPicklerGlobalSettings.cpp
 
 rdkit_test(graphmolIterTest itertest.cpp LINK_LIBRARIES SmilesParse GraphMol RDGeometryLib RDGeneral)
 
-#rdkit_test(hanoiTest hanoitest.cpp LINK_LIBRARIES SmilesParse_static FileParsers_static GraphMol_static
-#    RDGeometryLib_static RDGeneral_static ${RDKit_THREAD_LIBS} )
-rdkit_test(hanoiTest hanoitest.cpp LINK_LIBRARIES SmilesParse FileParsers GraphMol
+rdkit_test(hanoiTest hanoitest.cpp LINK_LIBRARIES
+     SubstructMatch SmilesParse FileParsers GraphMol
      RDGeometryLib RDGeneral ${RDKit_THREAD_LIBS} )
 
 rdkit_test(graphmolMemTest1 memtest1.cpp LINK_LIBRARIES SmilesParse GraphMol RDGeometryLib RDGeneral)
