--- a/Code/GraphMol/DistGeomHelpers/Wrap/CMakeLists.txt
+++ b/Code/GraphMol/DistGeomHelpers/Wrap/CMakeLists.txt
@@ -4,7 +4,6 @@ rdkit_python_extension(rdDistGeom rdDistGeom.cpp
                        DEST Chem
                        LINK_LIBRARIES
            LINK_LIBRARIES
-           DistGeomHelpers DistGeometry FileParsers MolTransforms SmilesParse SubstructMatch ForceFieldHelpers ForceField MolAlign Optimizer EigenSolvers Alignment GraphMol DataStructs RDGeometryLib RDGeneral RDBoost) 
+           DistGeomHelpers DistGeometry FileParsers MolTransforms SmilesParse SubstructMatch ForceFieldHelpers ForceField MolAlign Optimizer EigenSolvers Alignment GraphMol DataStructs RDGeometryLib RDGeneral RDBoost)
 
-add_pytest(pyDistGeom ${CMAKE_CURRENT_SOURCE_DIR}/testDistGeom.py)
-
+add_pytest(pyDistGeomHelpers ${CMAKE_CURRENT_SOURCE_DIR}/testDistGeom.py)
