--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -194,26 +194,6 @@ if(RDK_BUILD_PYTHON_WRAPPERS)
     endif (NOT PYTHON_INSTDIR)
 
    
-   execute_process(
-      COMMAND
-      ${PYTHON_EXECUTABLE} -c "from distutils import sysconfig; print(sysconfig.get_config_var('Py_ENABLE_SHARED'))"
-      OUTPUT_VARIABLE Py_ENABLE_SHARED
-      OUTPUT_STRIP_TRAILING_WHITESPACE
-   )
-
-   # See https://bugs.python.org/msg277944
-   # The "command to create shared modules". Used as variable in the "Makefile (and similar) templates to build python modules"
-   # for both in-python and third party modules. Initialized to hold the value which works for third party modules to link
-   # against the _installed_ python.
-   # We strip off the first word though (which will be the compiler name).
-   execute_process(
-      COMMAND
-      ${PYTHON_EXECUTABLE} -c "from distutils import sysconfig; print(sysconfig.get_config_var('LDSHARED').split(' ', 1)[1])"
-      OUTPUT_VARIABLE PYTHON_LDSHARED
-      OUTPUT_STRIP_TRAILING_WHITESPACE
-   )
-   message("PYTHON USING LINK LINE: ${PYTHON_LDSHARED}")
-   
     message("Python Install directory ${PYTHON_INSTDIR}")
     install(DIRECTORY rdkit DESTINATION ${PYTHON_INSTDIR}
       COMPONENT python
@@ -228,6 +208,28 @@ if(RDK_BUILD_PYTHON_WRAPPERS)
     set(RDKit_PythonDir "${PYTHON_INSTDIR}/rdkit")
   endif(RDK_INSTALL_INTREE)
 
+  # determine linkage of python
+  execute_process(
+      COMMAND
+      ${PYTHON_EXECUTABLE} -c "from distutils import sysconfig; print(sysconfig.get_config_var('Py_ENABLE_SHARED'))"
+      OUTPUT_VARIABLE Py_ENABLE_SHARED
+      OUTPUT_STRIP_TRAILING_WHITESPACE
+  )
+
+  # See https://bugs.python.org/msg277944
+  # The "command to create shared modules". Used as variable in the "Makefile (and similar) templates to build python modules"
+  # for both in-python and third party modules. Initialized to hold the value which works for third party modules to link
+  # against the _installed_ python.
+  # We strip off the first word though (which will be the compiler name).
+  execute_process(
+      COMMAND
+      ${PYTHON_EXECUTABLE} -c "from distutils import sysconfig; print(sysconfig.get_config_var('LDSHARED').split(' ', 1)[1])"
+      OUTPUT_VARIABLE PYTHON_LDSHARED
+      OUTPUT_STRIP_TRAILING_WHITESPACE
+   )
+   message("PYTHON Py_ENABLE_SHARED: ${Py_ENABLE_SHARED}")
+   message("PYTHON USING LINK LINE: ${PYTHON_LDSHARED}")
+   
 else(RDK_BUILD_PYTHON_WRAPPERS)
   find_package(Boost 1.39.0 REQUIRED)
 endif(RDK_BUILD_PYTHON_WRAPPERS)
