--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -238,21 +238,21 @@ if(RDK_BUILD_PYTHON_WRAPPERS)
       OUTPUT_VARIABLE Py_ENABLE_SHARED
       OUTPUT_STRIP_TRAILING_WHITESPACE
   )
-
-  # See https://bugs.python.org/msg277944
-  # The "command to create shared modules". Used as variable in the "Makefile (and similar) templates to build python modules"
-  # for both in-python and third party modules. Initialized to hold the value which works for third party modules to link
-  # against the _installed_ python.
-  # We strip off the first word though (which will be the compiler name).
-  execute_process(
-      COMMAND
-      ${PYTHON_EXECUTABLE} -c "from distutils import sysconfig; print(sysconfig.get_config_var('LDSHARED').split(' ', 1)[1])"
-      OUTPUT_VARIABLE PYTHON_LDSHARED
-      OUTPUT_STRIP_TRAILING_WHITESPACE
-   )
-   message("PYTHON Py_ENABLE_SHARED: ${Py_ENABLE_SHARED}")
-   message("PYTHON USING LINK LINE: ${PYTHON_LDSHARED}")
-
+  if(NOT win32)
+    # See https://bugs.python.org/msg277944
+    # The "command to create shared modules". Used as variable in the "Makefile (and similar) templates to build python modules"
+    # for both in-python and third party modules. Initialized to hold the value which works for third party modules to link
+    # against the _installed_ python.
+    # We strip off the first word though (which will be the compiler name).
+    execute_process(
+        COMMAND
+        ${PYTHON_EXECUTABLE} -c "from distutils import sysconfig; print(sysconfig.get_config_var('LDSHARED').split(' ', 1)[1])"
+        OUTPUT_VARIABLE PYTHON_LDSHARED
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+     )
+     message("PYTHON Py_ENABLE_SHARED: ${Py_ENABLE_SHARED}")
+     message("PYTHON USING LINK LINE: ${PYTHON_LDSHARED}")
+  endif()
 else(RDK_BUILD_PYTHON_WRAPPERS)
   find_package(Boost 1.56.0 REQUIRED)
 endif(RDK_BUILD_PYTHON_WRAPPERS)
