--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,11 +169,7 @@ if(RDK_BUILD_PYTHON_WRAPPERS)
     set(Python_ADDITIONAL_VERSIONS "${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}")
   endif (PYTHONINTERP_FOUND AND NOT Python_ADDITIONAL_VERSIONS)
   find_package(PythonLibs)
-  if(CMAKE_MAJOR_VERSION EQUAL 2 AND CMAKE_MINOR_VERSION EQUAL 6)
-    target_include_directories(rdkit_base INTERFACE ${PYTHON_INCLUDE_PATH})
-  else(CMAKE_MAJOR_VERSION EQUAL 2 AND CMAKE_MINOR_VERSION EQUAL 6)
-    target_include_directories(rdkit_base INTERFACE ${PYTHON_INCLUDE_DIR})
-  endif(CMAKE_MAJOR_VERSION EQUAL 2 AND CMAKE_MINOR_VERSION EQUAL 6)
+  target_include_directories(rdkit_base INTERFACE ${PYTHON_INCLUDE_DIR})
   find_package(NumPy REQUIRED)
   target_include_directories(rdkit_base INTERFACE ${PYTHON_NUMPY_INCLUDE_PATH})
 
@@ -235,6 +231,28 @@ if(RDK_BUILD_PYTHON_WRAPPERS)
 
   endif(RDK_INSTALL_INTREE)
 
+  # determine linkage of python
+  execute_process(
+      COMMAND
+      ${PYTHON_EXECUTABLE} -c "from distutils import sysconfig; print(sysconfig.get_config_var('Py_ENABLE_SHARED'))"
+      OUTPUT_VARIABLE Py_ENABLE_SHARED
+      OUTPUT_STRIP_TRAILING_WHITESPACE
+  )
+  if(NOT WIN32)
+    # See https://bugs.python.org/msg277944
+    # The "command to create shared modules". Used as variable in the "Makefile (and similar) templates to build python modules"
+    # for both in-python and third party modules. Initialized to hold the value which works for third party modules to link
+    # against the _installed_ python.
+    # We strip off the first word though (which will be the compiler name).
+    execute_process(
+        COMMAND
+        ${PYTHON_EXECUTABLE} -c "from distutils import sysconfig; print(sysconfig.get_config_var('LDSHARED').split(' ', 1)[1])"
+        OUTPUT_VARIABLE PYTHON_LDSHARED
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+     )
+     message("PYTHON Py_ENABLE_SHARED: ${Py_ENABLE_SHARED}")
+     message("PYTHON USING LINK LINE: ${PYTHON_LDSHARED}")
+  endif()
 else(RDK_BUILD_PYTHON_WRAPPERS)
   find_package(Boost 1.56.0 REQUIRED)
 endif(RDK_BUILD_PYTHON_WRAPPERS)
